<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_name">Click me!</string>
    <string name="title_activity_xml_view">XmlView</string>
    <string name="bn1">测试按钮1</string>
    <string name="bn2">测试按钮2</string>
    <string name="bn3">测试按钮3</string>
    <string name="bn4">测试按钮4</string>
    <string name="bn5">测试按钮5</string>
    <string name="ok1">独自一行的按钮</string>
    <string name="ok2">普通按钮</string>
    <string name="ok3">收缩按钮</string>
    <string name="ok4">拉伸按钮</string>
    <string name="title_activity_relativelayout_view">relativelayoutView</string>
    <string name="title_activity_grid_layout_view">GridLayoutView</string>
    <string name="calc_orig_text">0</string>
    <string name="calc_clear">清除</string>
    <string name="title_activity_absolutelayout_view">AbsolutelayoutView</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="login">登录</string>
    <string name="title_activity_text_view">TextViewActivity</string>
    <string name="title_activity_edit_text_view">EditTextView</string>
    <string name="title_activity_button_view">ButtonView</string>
    <string name="title_activity_check_button_view">CheckButtonView</string>
    <string name="title_activity_toggle_and_switch">ToggleAndSwitch</string>
    <string name="title_activity_clock_view">ClockView</string>
    <string name="title_activity_chronometer_view">ChronometerView</string>
    <string name="title_activity_image_view_test">ImageViewTest</string>
    <string name="title_activity_image_button_test">ImageButtonTest</string>
    <string name="title_activity_quic_contact_badge_test">QuicContactBadgeTest</string>
    <string name="title_activity_simple_list_view_test">SimpleListViewTest</string>
    <string name="title_activity_array_adapter_test">ArrayAdapterTest</string>
    <string name="title_activity_simple_adapter_test">SimpleAdapterTest</string>
    <string name="title_activity_auto_complete_text_view_test">AutoCompleteTextViewTest</string>
    <string name="title_activity_grid_view_test">GridViewTest</string>
    <string name="title_activity_expandable_list_view_test">ExpandableListViewTest</string>
    <string name="title_activity_spinner_test">SpinnerTest</string>
    <string name="title_activity_adapter_view_flipper_test">AdapterViewFlipperTest</string>
    <string name="title_activity_stack_view_test">StackViewTest</string>
    <string name="title_activity_preference_activity_test">设置程序参数</string>
	<string name="width_1">1像素</string>
	<string name="width_3">3像素</string>
	<string name="width_5">5像素</string>
	<string name="color_red">红色</string>
	<string name="color_green">绿色</string>
	<string name="color_blue">蓝色</string>
	<string name="color">画笔颜色</string>
	<string name="width">画笔宽度</string>
	<string name="blur">模糊效果</string>
	<string name="emboss">浮雕效果</string>
</resources>
