<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/absolutelayoutView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView 
        android:layout_x="20dip"
        android:layout_y="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        />
    <EditText android:inputType="text"
        android:layout_x="80dip"
        android:layout_y="15dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"/>
    <TextView 
        android:layout_x="20dip"
        android:layout_y="80dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwd"/>
    <EditText android:inputType="textPassword"
        android:layout_x="80dip"
        android:layout_y="75dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp" />
    <Button 
        android:layout_x="130dip"
        android:layout_y="135dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />
</AbsoluteLayout>